--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <ul class="nav navbar-nav">
        <a class="navbar-brand" href="/">CHOW</a>
        <li class="navbarfont"><%= link_to "Browse", articles_path %></li>
-       <li class="navbarfont"><%= link_to "New Recipes", new_arrivals_articles_path %></li>
+       <li class="navbarfont"><%= link_to "New Recipes"%></li>
      </ul>
 
      <form class="navbar-form navbar-left" role="search">
