--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-6">
-        <h3><%= @article.title %></h3>
+        <h3><b><%= @article.title %></b></h3>
     <div class="thumbnail">
       <%= image_tag @article.image.url %>
     </div>
   </div>
   <div class="col-md-6">
     <br>
-    <br>
+	  <p><b><%= "Submitted by #{@article.user.email}" %></b></p>
     <p><%= simple_format(@article.text) %></p>
     <br>
 
