Tidied pages up with Bootstrap. Changed user visibility.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,10 @@
           <div class="caption">
             <h3><%= article.title %></h3>
           </div>
+          <%if (user_signed_in?) && (current_user == article.user)%>
+        <%= link_to 'Edit', edit_article_path(article), class:"btn btn-link" %>
+        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-link" %>
+        <% end %>
         </div>
       </div>
     <% end %>
