--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 
      <form class="navbar-form navbar-left" role="search">
        <div class="input-group">
-           <%= form_tag(:method => "get", id: "search-form") do %>
+           <%= form_tag(articles_path, :method => "get", id: "search-form") do %>
            <%= text_field_tag :search, params[:search], placeholder: "Search Listings", class: 'form-control' %>
            <span class="input-group-btn">
              <%= submit_tag "Search", class: 'btn btn-default' %>
