--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,6 +6,7 @@
           <%= link_to image_tag(article.image.url), article %>
           <div class="caption">
             <h3><%= article.title %></h3>
+                        <p><%= "Submitted by #{article.user.email}" %></p>
           </div>
           <%if (user_signed_in?) && (current_user == article.user)%>
         <%= link_to 'Edit', edit_article_path(article), class:"btn btn-link" %>
