--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <ul class="nav navbar-nav">
        <a class="navbar-brand" href="/">CHOW</a>
        <li class="navbarfont"><%= link_to "Browse", articles_path %></li>
-       <li class="navbarfont"><%= link_to "New Recipes"%></li>
+       <li class="navbarfont"><%= link_to "New Recipes", new_arrivals_path %></li>
      </ul>
 
      <form class="navbar-form navbar-left" role="search">
@@ -34,7 +34,7 @@
           <li class="divider"></li>
           <li><%= link_to 'New Recipe', new_article_path %></li>
           <li class="divider"></li>
-          <li><%= link_to 'My Recipes'  %></li>
+          <li><%= link_to 'My Recipes', myrecipes_path  %></li>
           <li><%= link_to 'Saved Recipes' %></li>
           <li class="divider"></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
