Changed visuals and visibility of destroying comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,9 +7,10 @@
   <strong>Comment:</strong>
   <%= comment.body %>
 </p>
-
+<%if (user_signed_in?) && (current_user == @article.user)%>
 <p>
   <%= link_to 'Destroy Comment', [comment.article, comment],
                method: :delete,
                data: { confirm: 'Are you sure?' } %>
 </p>
+<% end %>
