--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
      <form class="navbar-form navbar-left" role="search">
        <div class="input-group">
            <%= form_tag(articles_path, :method => "get", id: "search-form") do %>
-           <%= text_field_tag :search, params[:search], placeholder: "Search Listings", class: 'form-control' %>
+           <%= text_field_tag :search, params[:search], placeholder: "Search Recipes", class: 'form-control' %>
            <span class="input-group-btn">
              <%= submit_tag "Search", class: 'btn btn-default' %>
            </span>
@@ -31,7 +31,6 @@
       <li class="dropdown navbarfont custom-button">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %>  <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li class="divider"></li>
           <li><%= link_to 'New Recipe', new_article_path %></li>
           <li class="divider"></li>
           <li><%= link_to 'My Recipes', myrecipes_path  %></li>
@@ -39,7 +38,6 @@
           <li class="divider"></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
           <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
-          <li class="divider"></li>
 
           <%end%>
         </ul>
